--- a/frontend/templates/main_page.html
+++ b/frontend/templates/main_page.html
@@ -1,21 +1,3 @@
-
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    {% for message in messages %}
-         <script>
-      Swal.fire({
-  title: 'Error!',
-  text: 'Do you want to continue',
-  icon: 'error',
-  confirmButtonText: 'Cool'
-})
-          </script>
-
-    {% endfor %}
-
-  {% endif %}
-
-{% endwith %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,20 +24,20 @@
 <body id="page-top">
 
 {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    {% for message in messages %}
-         <script>
-      Swal.fire({
-  title: 'Error!',
-  text: '{{message}}',
-  icon: 'error',
-  confirmButtonText: 'Ok'
-})
-          </script>
+    {% if messages %}
+        {% for message in messages %}
+            <script>
+                Swal.fire({
+                    title: 'Error!',
+                    text: '{{message}}',
+                    icon: 'error',
+                    confirmButtonText: 'Ok'
+                })
+            </script>
 
-    {% endfor %}
+        {% endfor %}
 
-  {% endif %}
+    {% endif %}
 
 {% endwith %}
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -69,7 +51,11 @@
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#start">Start</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services">My Account</a></li>
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('views.dashboard') }}">Dashboard</a></li>
+                {% else %}
+                   <li class="nav-item"><a class="nav-link" href="{{ url_for('views.login') }}">Account</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -172,7 +158,8 @@
                     <!-- Name input-->
                     <div class="form-floating mb-3">
 
-                        <input required="required" name="query" class="form-control" id="query" type="text" placeholder="Company's name"
+                        <input required="required" name="query" class="form-control" id="query" type="text"
+                               placeholder="Company's name"
                         />
                         <label for="query">Company's name</label>
                     </div>
@@ -202,7 +189,8 @@
                         <br>
                         <b>
                             <label class="form-label mt-0 text-white" for="check">Advanced query</label>
-                            <input class="form-check-input " style="margin-left: 2%" type="checkbox" name="check" id="check"
+                            <input class="form-check-input " style="margin-left: 2%" type="checkbox" name="check"
+                                   id="check"
                             >
                         </b>
                     </div>
