--- a/frontend/static/css/vertical-layout-light/style.css
+++ b/frontend/static/css/vertical-layout-light/style.css
@@ -9232,6 +9232,10 @@ progress {
   text-transform: uppercase;
 }
 
+.back_login{
+  background: #5C4D42CC;
+}
+
 .blockquote {
   margin-bottom: 1rem;
   font-size: 1.25rem;
