--- a/frontend/static/css/main_page_style.css
+++ b/frontend/static/css/main_page_style.css
@@ -11353,10 +11353,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../../../../../startbootstrap-creative-gh-pages/assets/img/bg-masthead.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%) no-repeat scroll center;
   background-size: cover;
 }
 header.masthead h1, header.masthead .h1 {
